Web Core: Websocket state should be set to closed in didReceiveMessage call back. https://bugs.webkit.org/show_bug.cgi?id=136219

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-09-15
Reviewed by Alexey Proskuryakov.

Source/WebCore:

Set the Websocket state to closed in didReceiveMessage call back.

Test: http/tests/websocket/tests/hybi/error-event-ready-state.html

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::didReceiveMessageError):

LayoutTests:

Added test to check readyState is CLOSED within onerror event.

* http/tests/websocket/tests/hybi/error-event-ready-state-expected.txt: Added.
* http/tests/websocket/tests/hybi/error-event-ready-state.html: Added.

Canonical link: https://commits.webkit.org/154667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173642 268f45cc-cd09-0410-ab3c-d52691b4dbfc